Bug 1159500 - Crash in mozilla::net::CacheIndexIterator::GetNextHash(unsigned char (*)[20]). r=honzab, a=sledru